2013-02-11  Ryosuke Niwa  <rniwa@webkit.org>

        Disable delete button controller on non-Mac ports and delete EditorClient::shouldShowDeleteInterface
        https://bugs.webkit.org/show_bug.cgi?id=109534

        Reviewed by Anders Carlsson.

        * wtf/Platform.h:

2013-02-11  David Kilzer  <ddkilzer@apple.com>

        [iOS] Upstream changes to Platform.h
        <http://webkit.org/b/109459>

        Reviewed by Benjamin Poulain.

        * wtf/Platform.h:
        - Changes for armv7s.
        - Add ENABLE() definitions for DASHBOARD_SUPPORT and WEBGL.
        - Re-sort ENABLE() and USE() macros.
        - Remove ENABLE() macros for JIT, LLINT and YARR_JIT to enable
          on iOS Simulator.  They are already defined below.
        - Turn off HAVE(HOSTED_CORE_ANIMATION) for iOS.
        - Turn on USE(COREMEDIA) for iOS 6.0 and later.

2013-02-08  Oliver Hunt  <oliver@apple.com>

        Harden FastMalloc (again)
        https://bugs.webkit.org/show_bug.cgi?id=109334

        Reviewed by Mark Hahnenberg.

        Re-implement hardening of linked lists in TCMalloc.

        In order to keep heap introspection working, we need to thread the
        heap entropy manually as the introspection process can't use the
        address of a global in determining the mask.  Given we now have to
        thread a value through anyway, I've stopped relying on ASLR for entropy
        and am simply using arc4random() on darwin, and time + ASLR everywhere
        else.

        I've also made an explicit struct type for the FastMalloc singly linked
        lists, as it seemed like the only way to reliably distinguish between
        void*'s that were lists vs. void* that were not.  This also made it
        somewhat easier to reason about things across processes.

        Verified that all the introspection tools work as expected.

        * wtf/FastMalloc.cpp:
        (WTF::internalEntropyValue):
        (WTF):
        (HardenedSLL):